--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chalk": "^1.0.0",
     "css-loader": "^0.9.1",
     "del": "^1.1.1",
-    "electron-prebuilt": "^0.30.2",
+    "electron": "latest",
     "eslint": "^1.2.1",
     "eslint-plugin-mocha": "^0.5.1",
     "eslint-plugin-react": "^3.2.3",
